--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,13 +47,6 @@
         <item name="android:windowExitAnimation">@anim/slide_out_down</item>
     </style>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-    </style>
-
     <!--  TODO: Remove these once we've removed the only screen using it -->
     <style name="ProfileFieldLabel">
         <item name="android:textSize">14sp</item>
@@ -64,20 +57,6 @@
         <item name="colorControlActivated">?colorSecondary</item>
         <item name="android:textSize">16sp</item>
     </style>
-
-    <!--
-    <style name="AppTheme.MenuItem">
-        <item name="android:textColor">?colorSecondary</item>
-        <item name="android:fontFamily">@font/circular_book</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textAllCaps">false</item>
-    </style>
-
-    <style name="AppTheme.Toolbar" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:actionMenuTextColor">?colorSecondary</item>
-        <item name="android:actionMenuTextAppearance">@style/AppTheme.MenuItem</item>
-    </style>
-    -->
 
     <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bottom_sheet_dialog_fragment_background</item>
@@ -136,11 +115,14 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
+    <!-- Adyen Compatibility fixes -->
     <style name="AdyenCheckout.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxStrokeColor">?colorPrimary</item>
         <item name="hintTextAppearance">@style/AdyenCheckout.HintTextStyle</item>
         <item name="hintTextColor">@color/primaryColor</item>
         <item name="android:minHeight">@dimen/input_layout_height</item>
     </style>
+
+    <style name="AdyenCheckout.BottomSheet" parent="BottomSheetDialogTheme" />
 
 </resources>
