--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -30,4 +30,5 @@
     <!-- Compatibility with Adyen -->
     <item name="primaryColor" type="color">@color/colorPrimary</item>
     <item name="textColor" type="color">@color/textColorPrimary</item>
+    <item name="indicator_color" type="color">@color/colorPrimaryVariant</item>
 </resources>
