--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="?android:colorBackground" />
+    <item android:drawable="@color/hedvig_black" />
     <item
-        android:drawable="@drawable/hedvig_wordmark_splash"
+        android:drawable="@drawable/ic_hedvig_h"
         android:gravity="center" />
 </layer-list>
