--- a/app/src/main/res/values-night/colors_dark.xml
+++ b/app/src/main/res/values-night/colors_dark.xml
@@ -27,4 +27,6 @@
     <item name="colorChatInputButton" type="color">@color/button_background_dark</item>
     <item name="colorChatHedvigBackground" type="color">@color/button_background_dark</item>
 
+    <item name="colorOfferSignButton" type="color">@color/violet_300</item>
+
 </resources>
