--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -25,4 +25,7 @@
     <item name="colorChatUserBackground" type="color">@color/hedvig_light_gray</item>
     <item name="colorChatHedvigBackground" type="color">@color/white</item>
     <item name="colorChatInputButton" type="color">@color/hedvig_light_gray</item>
+
+    <item name="colorOfferSignButton" type="color">@color/hedvig_black</item>
+
 </resources>
