--- a/app/src/main/res/layout/offer_fact_area.xml
+++ b/app/src/main/res/layout/offer_fact_area.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/off_white"
     android:orientation="vertical">
 
+    <!--TODO-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_triple"
         android:gravity="center_horizontal"
-        android:text="@string/OFFER_HOUSE_SUMMARY_TITLE"
-        android:textAppearance="?textAppearanceHeadline4"/>
+        android:text="TODO Din information"
+        android:textAppearance="?textAppearanceHeadline4" />
 
     <TextView
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
         android:layout_marginEnd="@dimen/base_margin_double"
         android:gravity="center_horizontal"
         android:text="@string/OFFER_HOUSE_SUMMARY_DESC"
-        style="?textAppearanceBody1"/>
+        style="?textAppearanceBody1" />
 
     <com.hedvig.app.ui.view.ExpandableContentView
         android:id="@+id/expandableContentView"
