bottom sheet fix

--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -151,7 +151,7 @@
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/premiumBoxSignButton"
                             style="?attr/materialButtonContainedLargeStyle"
-                            android:theme="@style/ThemeOverlay.Hedvig.Button.OfferSign"
+                            android:theme="@style/Hedvig.Button.Large"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/base_margin_double"
