--- a/app/src/main/res/layout/offer_info_area.xml
+++ b/app/src/main/res/layout/offer_info_area.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/base_margin_double"
         android:orientation="horizontal">
-
+        <!--TODO  get real icon-->
         <ImageView
             android:layout_width="@dimen/offer_info_icon"
             android:layout_height="@dimen/offer_info_icon"
@@ -43,6 +43,7 @@
         android:layout_margin="@dimen/base_margin_double"
         android:orientation="horizontal">
 
+        <!--TODO  get real icon-->
         <ImageView
             android:layout_width="@dimen/offer_info_icon"
             android:layout_height="@dimen/offer_info_icon"
@@ -76,6 +77,7 @@
         android:layout_margin="@dimen/base_margin_double"
         android:orientation="horizontal">
 
+        <!--TODO  get real icon-->
         <ImageView
             android:layout_width="@dimen/offer_info_icon"
             android:layout_height="@dimen/offer_info_icon"
