--- a/app/src/main/res/values/button_themes.xml
+++ b/app/src/main/res/values/button_themes.xml
@@ -9,15 +9,15 @@
     <style name="Hedvig.Button.Large">
         <item name="android:padding">@dimen/base_margin_double</item>
         <item name="shapeAppearance">?shapeAppearanceLargeComponent</item>
+        <item name="colorButton">@color/colorLargeButton</item>
+        <item name="colorPrimary">@color/colorOnPrimary</item>
+        <item name="textColorButton">@color/colorOnPrimary</item>
     </style>
 
     <style name="Hedvig.Button.Text" parent="Widget.MaterialComponents.Button.TextButton" />
 
-    <style name="Hedvig.Button.Outlined" parent="Widget.MaterialComponents.Button.OutlinedButton" />
-
-    <style name="ThemeOverlay.Hedvig.Button.OfferSign" parent="">
-        <item name="colorButton">@color/colorOfferSignButton</item>
-        <item name="colorPrimary">@color/colorOnPrimary</item>
-        <item name="textColorButton">@color/colorOnPrimary</item>
+    <style name="Hedvig.Button.Outlined" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="strokeColor">@color/colorPrimary</item>
     </style>
+
 </resources>
