--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -26,6 +26,6 @@
     <item name="colorChatHedvigBackground" type="color">@color/white</item>
     <item name="colorChatInputButton" type="color">@color/hedvig_light_gray</item>
 
-    <item name="colorOfferSignButton" type="color">@color/hedvig_black</item>
+    <item name="colorLargeButton" type="color">@color/hedvig_black</item>
 
 </resources>
