--- a/app/src/main/res/drawable/ic_my_documents.xml
+++ b/app/src/main/res/drawable/ic_my_documents.xml
@@ -1,48 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="28dp"
-    android:viewportWidth="22"
-    android:viewportHeight="28">
-  <path
-      android:pathData="M1,1.5h17v22h-17z"
-      android:strokeWidth="1.33"
-      android:fillColor="#00000000"
-      android:strokeColor="?colorPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M18,3.5l3,0l0,23l-18,0l0,-3"
-      android:strokeWidth="1.33"
-      android:fillColor="#00000000"
-      android:strokeColor="?colorPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M4,5.5L15,5.5"
-      android:strokeWidth="1.33"
-      android:fillColor="#00000000"
-      android:strokeColor="?colorPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M4,9L15,9"
-      android:strokeWidth="1.33"
-      android:fillColor="#00000000"
-      android:strokeColor="?colorPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M4,12.5L15,12.5"
-      android:strokeWidth="1.33"
-      android:fillColor="#00000000"
-      android:strokeColor="?colorPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M4,16L15,16"
-      android:strokeWidth="1.33"
-      android:fillColor="#00000000"
-      android:strokeColor="?colorPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M4,19.5L12,19.5"
-      android:strokeWidth="1.33"
-      android:fillColor="#00000000"
-      android:strokeColor="?colorPrimary"
-      android:fillType="evenOdd"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="22dp" android:height="28dp" android:viewportWidth="22" android:viewportHeight="28">
+    <path android:pathData="M1 1.5h17v22H1z" android:strokeWidth="1.33" android:strokeColor="?colorPrimary" android:fillType="evenOdd"/>
+    <path android:pathData="M18 3.5h3v23H3v-3m1-18h11M4 9h11M4 12.5h11M4 16h11M4 19.5h8" android:strokeWidth="1.33" android:strokeColor="?colorPrimary" android:fillType="evenOdd"/>
 </vector>
